<resources>
    <string name="app_name">印章审批系统</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_look_file">查看附件</string>
    <string name="action_look_img">查看用印页</string>
    <string name="action_seal_pic">拍照</string>
    <string name="action_uploadImg">上传用印图片</string>
    <string name="action_uploadFile">上传文件</string>
    <string name="title_activity_login">登录</string>
    <string name="login_btn_str">登录</string>
    <string name="main_apply_btn_str">申请</string>
    <string name="main_approve_btn_str">审批</string>
    <string name="main_audit_btn_str">审核</string>
    <string name="main_picture_btn_str">用印</string>
    <string name="apply_menu_new_str">新建申请</string>
    <string name="file_name_str">文件名称</string>
    <string name="file_no_str">发文号</string>
    <string name="file_type_str">文件类型</string>
    <string name="file_write_time_str">申请时间</string>
    <string name="file_mach_str">印控仪</string>
    <string name="file_write_id_str">申请人</string>
    <string name="file_seal_str">印章</string>
    <string name="file_seal_num_str">盖章次数</string>
    <string name="file_dec_str">文件描述</string>
    <string name="title_activity_apply_list">申请列表</string>
    <string name="title_activity_approve_list">审批列表</string>
    <string name="title_activity_approve_tab">待审批列表</string>
    <string name="title_activity_approved_list">已审批列表</string>
    <string name="title_activity_approved_tab">已审批列表</string>
    <string name="title_activity_apply_detail">详细信息</string>
    <string name="title_activity_apply_new_file">新建用印</string>
    <string name="title_activity_audit_list">审核</string>
    <string name="title_activity_audit_detail">审核详细信息</string>
    <string name="title_activity_seal_picture">用印</string>
    <string name="title_activity_file_upload">文件上传</string>
    <string name="title_activity_down_load_img">DownLoadImgActivity</string>
    <string name="title_activity_seal_picture_upload">SealPictureUploadActivity</string>
    <string name="title_activity_approve_list_activity01">ApproveListActivity01</string>
    <string name="title_activity_approve_detail">ApproveDetailActivity</string>
    <string name="title_activity_accessory_list">AccessoryListActivity</string>
</resources>
