<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:background="@mipmap/setting_btn_unenable">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_llyt_height"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            android:showDividers="end">


            <Button
                android:id="@+id/apply_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@mipmap/main_apply_btn"
                android:textColor="#003399"
                android:text="@string/main_apply_btn_str" />


            <Button
                android:id="@+id/approve_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#003399"
                android:background="@mipmap/mian_approve_btn"
                android:text="@string/main_approve_btn_str" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_llyt_height"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/audit_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textColor="#003399"
                android:background="@mipmap/main_audit_btn"
                android:text="@string/main_audit_btn_str" />


            <Button
                android:id="@+id/picture_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#003399"
                android:background="@mipmap/main_picture_btn"
                android:text="@string/main_picture_btn_str" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
