<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_seal_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_seal_num_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_seal_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_seal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_seal_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_seal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_type_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_write_time_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_write_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_tv_file_dec_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_dec_str"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detail_tv_file_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>
