<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.dfjy.seal.activity.ApplyDetailActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name_str"
                android:id="@+id/detail_tv_file_name_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_name"/>
        </TableRow>

     <!--   <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_no_str"
                android:id="@+id/detail_tv_file_no_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_no"/>
        </TableRow> -->

        <TableRow

            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_seal_num_str"
                android:id="@+id/detail_tv_file_seal_num_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_seal_num"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_seal_str"
                android:id="@+id/detail_tv_file_seal_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_seal"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_type_str"
                android:id="@+id/detail_tv_file_type_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_type"/>
        </TableRow>

        <TableRow
        android:layout_width="match_parent"
            android:layout_marginTop="10dp"
        android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_write_time_str"
                android:id="@+id/detail_tv_file_time_tv"/>
        <TextView
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detail_tv_file_write_time"/>
    </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="50dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_dec_str"
                android:id="@+id/detail_tv_file_dec_tv"/>
            <TextView
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/detail_tv_file_dec"/>
        </TableRow>


    </TableLayout>
</RelativeLayout>
