<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dfjy.seal.activity.ApplyNewFileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TableLayout
            android:id="@+id/ltb_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_name_str"></TextView>

                <EditText
                    android:id="@+id/new_edit_file_name"
                    style="@style/my_edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:paddingLeft="10dp" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_seal_num_str"></TextView>

                <EditText
                    android:id="@+id/new_edit_file_seal_num"
                    style="@style/my_edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_mach_str"></TextView>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:background="@mipmap/spinner"
                    android:id="@+id/new_spinner_mach"
                    />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_seal_str"></TextView>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:background="@mipmap/spinner"
                    android:id="@+id/new_spinner_file_seal"
                     />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_type_str"></TextView>
                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:background="@mipmap/spinner"
                    android:id="@+id/new_spinner_file_type"
                    />


            </TableRow>



            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_dec_str"></TextView>

                <EditText
                    android:id="@+id/new_edit_file_dec"
                    style="@style/my_edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingLeft="10dp" />
            </TableRow>

       <!--     <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">
                <ImageView android:layout_width="80dp"
                    android:id="@+id/new_imageview"
                    android:layout_height="80dp"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_addFile_btn"
                    android:background="@drawable/login_btn_bg"
                    android:text="选择上传附件"/>

            </TableRow>-->


        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="80dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/new_btn"
                android:background="@drawable/login_btn_bg"
                android:text="新建"/>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
