<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dfjy.seal.activity.ApplyDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_name_str" />

                <TextView
                    android:id="@+id/detail_tv_file_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>


            <TableRow

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_seal_num_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_seal_num_str" />

                <TextView
                    android:id="@+id/detail_tv_file_seal_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_seal_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_seal_str" />

                <TextView
                    android:id="@+id/detail_tv_file_seal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_type_str" />

                <TextView
                    android:id="@+id/detail_tv_file_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_write_time_str" />

                <TextView
                    android:id="@+id/detail_tv_file_write_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/detail_tv_file_dec_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_dec_str" />

                <TextView
                    android:id="@+id/detail_tv_file_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp" />
            </TableRow>


        </TableLayout>

       <!-- <Button
            android:id="@+id/audit_look_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/login_btn_bg"
            android:text="查看用印页"
            android:textColor="#ffffff" /> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/audit_ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_bg"
                android:text="通过"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/audit_erro_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_bg"
                android:text="不通过"
                android:textColor="#ffffff" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
